# qdrant_file_scanner

./: .gitignore  CONTRIBUTING.md  MACOS_AUTOSTART_SETUP.md  MCP_USAGE_EXAMPLES.md  RAG_SEARCH_CLI.md  README.md  RERANKING_GUIDE.md  claude_desktop_config.json  com.ragmonitor.startup.plist  config.yaml  enable_reranker.py  install_rag_search.sh  mcp_server.py  memory_monitor.py  memory_utils.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup.cfg  setup.sh  setup_mcp.sh  start_rag_monitor.sh  test_config.py  test_extractors.py  test_mcp_server.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  code-quality.yml  release.yml
rag_file_monitor/: __init__.py  embedding_manager.py  file_monitor.py  manage_deleted.py  memory_utils.py  reranker.py  search_cli.py  text_extractors.py
tests/: README.md  __init__.py  disabled_test_integration.py  run_tests.py  test_config.py  test_embedding_manager.py  test_file_monitor.py  test_integration.py  test_mcp_reranking.py  test_mcp_server.py  test_mcp_server_unit.py  test_reranker.py  test_text_extractors_unit.py  test_utils.py
