[project]
name = "rag-file-monitor"
version = "0.1.0"
description = "File monitoring tool for RAG system with Qdrant vector database"
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "watchdog>=3.0.0",
    "torch>=2.0.0",
    "qdrant-client>=1.1.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0,<3.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "python-magic>=0.4.27",
    "chardet>=5.2.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "libmagic>=0.4",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "mcp[cli]>=1.10.0"
]

[project.scripts]
rag-monitor = "rag_file_monitor.file_monitor:main"
rag-manage = "rag_file_monitor.manage_deleted:cli"
rag-search = "rag_file_monitor.search_cli:main"
rag-mcp-server = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_file_monitor"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.black]
line-length = 127
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  models/
)/
'''

[tool.coverage.run]
source = ["rag_file_monitor"]
omit = ["*/tests/*", "*/test_*.py", "models/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]